--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "@reduxjs/toolkit": "^1.8.3",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dotenv": "^3.3.1",
     "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.2.0",
